force-app/main/default/objects/Lead/fields/Alpha2__c.field-meta.xml
<CustomField>
    <fullName>Alpha2__c</fullName>
    <label>Alpha2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>