force-app/main/default/objects/Lead/fields/Alpha3__c.field-meta.xml
<CustomField>
    <fullName>Alpha3__c</fullName>
    <label>Alpha3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>