force-app/main/default/objects/Lead/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <description>Country Capital Lead</description>
    <label>Capital</label>
    <length>80</length>
    <type>Text</type>
</CustomField>