force-app/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country Lead field.</description>
    <label>Country</label>
    <length>128</length>
    <type>Text</type>
</CustomField>