force-app/main/default/objects/Lead/fields/RegionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocs__c</fullName>
    <description>Regional Blocs Lead</description>
    <label>RegionalBlocs</label>
    <length>128</length>
    <type>Text</type>
</CustomField>