force-app/main/default/objects/Lead/validationRules/Prevent_Lead_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Lead_Owner_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    NOT($Permission.Admin_No_Validation),  
    OR(
        ISBLANK(TEXT(LeadSource)),        
        ISBLANK(Country__c),               
        AND(
            ISBLANK(NumberOfEmployees),
            NOT($Permission.Contract_Manager_No_Validation) 
        )
    )
)</errorConditionFormula>
    <errorMessage>You cannot change the Owner unless the required fields are filled:

Lead Source (all profiles)

Country (except System Administrators)

No. of Employees (except Contract Managers) Please fill the missing fields before reassigning the Owner.&quot;</errorMessage>
</ValidationRule>